<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="270dp"
    android:theme="@style/AppTheme">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_bar_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Text"
        android:textSize="24sp"
        android:gravity="center"
        />
    <RadioGroup
        android:id="@+id/corner_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/rounded"/>
        <RadioButton
            android:id="@+id/straight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/straight"/>
    </RadioGroup>
    <RadioGroup
        android:id="@+id/border_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/corner_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/border"/>
        <RadioButton
            android:id="@+id/no_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/no_border"/>
    </RadioGroup>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/agc_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#44000000"
        app:layout_constraintTop_toBottomOf="@id/border_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabGravity="fill"
        app:tabIndicatorColor="#FFFFFF"
        app:tabIndicatorHeight="2dp"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextAppearance="@style/text"
        app:tabTextColor="#ADADAD">
        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linear" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hist_eq" />
    </com.google.android.material.tabs.TabLayout>

    <RadioGroup
        android:id="@+id/dynamic_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/agc_tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/dynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/dynamic"/>
        <RadioButton
            android:id="@+id/full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/full"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/locks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/agc_tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/min_lock_value"
            style="@style/Text"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/min_lock_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLength="3"
            android:inputType="numberSigned"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/max_lock_value"
            style="@style/Text"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/max_lock_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Text"
            android:text="@string/reset" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/celsius"/>
        <RadioButton
            android:id="@+id/fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/fahrenheit"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF7979"
            style="@style/Text"
            android:text="@android:string/cancel" />
        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A2FF79"
            style="@style/Text"
            android:text="@android:string/ok" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>