<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thermal_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H, 9:16">

        <ImageView
            android:id="@+id/thermal_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            android:contentDescription="@string/thermal_overlay"
            app:layout_constraintDimensionRatio="H, 9:16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.thermal.seekware.SeekPreview
            android:id="@+id/seek_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H, 3:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.thermal.seekware.ColorPalettePicker
        android:id="@+id/color_lut_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@+id/ui_bar" />

    <LinearLayout
        android:id="@+id/ui_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#44000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/color_lut"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_color_wheel"
            android:onClick="onColorLutClicked"
            android:contentDescription="@string/color_lut" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/capture"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/ic_circle"
                android:backgroundTint="#ffffffff"
                android:contentDescription="@string/capture"
                android:onClick="onCaptureClicked" />

            <ImageView
                android:id="@+id/capture_outline"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_circle_outline"
                android:contentDescription="@string/capture" />

            <ImageButton
                android:id="@+id/stop_record"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/ic_square"
                android:contentDescription="@string/capture"
                android:onClick="onStopClicked" />
            <TextView
                android:id="@+id/video_info"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/switch_camera_video"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_switch_video"
            android:contentDescription="@string/info"
            android:onClick="onSwitchClicked" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>